# hl7-adt-pipline

./: README.md  pyproject.toml
data/samples/: adt_a01.hl7
scripts/: apply_schema.py  schema.sql  test_identity_resolver.py  verify_schema.py
src/: identity_resolver.py  main.py  parser.py  uploader.py  validator.py
